facts section done

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body class="work-sans-font">
-    <header class="hero-section">
+    <header class="bg-light">
         <div class="hero-container">
-            <nav class="nav-bar">
+            <nav class="navbar display-flex">
                 <div class="title">
                     <h3>G3 Architects</h3>
                 </div>
                 <div class="nav-items">
-                    <ul class="nav-links">
+                    <ul class="nav-links display-flex text-gray">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact Us</a></li>
@@ -24,17 +24,18 @@
                     </ul>
                 </div>
             </nav>
-            
+
             <div class="banner">
                 <div class="banner-content">
                     <h2 class="banner-title">Brand New
                         <br>Group of Architects
                     </h2>
-                    <p class="banner-description">We are a fresh collective of visionary architects redefining modern
+                    <p class="banner-description text-light-gray">We are a fresh collective of visionary architects
+                        redefining modern
                         design.
                         <br>From concept to creation, we craft inspiring spaces that blend functionality with elegance
                     </p>
-            
+
                     <button class="btn-primary">Explore More</button>
                 </div>
                 <img class="banner-image" src="./images/banner.png" alt="A group photo of three architects">
@@ -43,7 +44,68 @@
     </header>
 
     <main>
+        <!-- teams section start -->
+        <section class="teams display-flex">
+            <div class="team-image-container">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of
+                        Our</span> <span class="text-primary">Features</span></h3>
+                <p class="text-light-gray">Explore the key elements that define our work — smart planning, creative
+                    design, and a commitment to quality that turns
+                    ideas into reality.</p>
 
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+
+        <!-- features section start -->
+        <section>
+
+        </section>
+
+        <!-- some facts -->
+        <section class="facts-section">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="facts-description text-light-gray">Here’s a glimpse into what we’ve accomplished — real numbers
+                that reflect our passion, experience, and dedication to architectural excellence.</p>
+
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
 
     <footer>
