g3-architects responsive website done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <button class="btn-primary">Explore More</button>
                 </div>
-                <img class="banner-image" src="./images/banner.png" alt="A group photo of three architects">
+                <img class="banner-image " src="./images/banner.png" alt="A group photo of three architects">
             </div>
         </div>
     </header>
@@ -64,8 +64,73 @@
         </section>
 
         <!-- features section start -->
-        <section>
+        <section class="features display-flex">
+            <div class="features-contant">
+                <h3 id="features-section-title" class="section-title">
+                    Features you will <br>love & enjoy
+                </h3>
+                <p class="text-light-gray">
+                    Designed with you in mind — our standout features combine functionality, style, and innovation to
+                    deliver an
+                    experience you’ll truly appreciate. Each detail is thoughtfully planned to meet your modern needs
+                    and lifestyle.
+                    Experience the perfect blend of comfort, creativity, and quality in every feature.
+                </p>
+                <!-- feature card container -->
+                <div class="features-card">
+                    <h4 class="features-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        Experience seamless design across all devices. Our responsive layouts ensure your website looks
+                        stunning and
+                        functions
+                        flawlessly on both desktop and mobile screens.
+                    </p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">
+                        Experience seamless design across all devices. Our responsive layouts ensure your website looks
+                        stunning and
+                        functions
+                        flawlessly on both desktop and mobile screens.
+                    </p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-title">Drag & Drop Builder</h4>
+                    <p class="text-light-gray">
+                        Build your dream layout without writing a single line of code. Our intuitive drag & drop builder
+                        makes it easy
+                        to
+                        create, move, and customize elements exactly how you want.
+                    </p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-title">Awesome Modern Design</h4>
+                    <p class="text-light-gray">
+                        Stand out with sleek, contemporary design. Every visual element is crafted with modern
+                        aesthetics, clean lines,
+                        and
+                        user-friendly structure to create a lasting impression.
+                    </p>
+                </div>
+                <div class="features-card">
+                    <h4 class="features-title">Super Easy to Edit</h4>
+                    <p class="text-light-gray">
+                        No need for advanced skills — our platform is designed for simplicity. Update text, images, and
+                        layouts
+                        effortlessly,
+                        giving you full control with minimal effort.
+                    </p>
+                </div>
 
+            </div>
+            <div class="featured-architect">
+                <img src="./images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Year</span> <br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
 
         <!-- some facts -->
@@ -106,10 +171,27 @@
             </div>
             </div>
         </section>
+
+        <!-- Our Sponspors -->
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray ">Trusted by top-tier companies who support our mission to build smarter,
+                    bolder, and better.</p>
+            </div>
+
+            <div class="sponsors-companies">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
 
     <footer>
-
+        <p class="text-gray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
